fixed some alignment stuff

--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -166,10 +166,6 @@ header .intro-text .skills {
     text-transform: none;
 }
 
-.navbar-brand img {
-    max-height: 100%;
-}
-
 .navbar a:focus {
     outline: 0;
 }
